[project]
name = "learn-ray"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ray[data,serve,train,tune]>=2.54.0",
    "boto3>=1.42.30",
    "s3fs>=2026.1.0",
    "pyarrow>=23.0.0",
    "matplotlib>=3.9.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
    "xgboost>=2.1.0",
    "xgboost-ray>=0.1.19",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "pandas==2.3",
]
